crates/swc_ecma_parser/tests/test262-error-references/fail/e3fbcf63d7e43ead.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/e3fbcf63d7e43ead.js:1:9
  |
1 | for(var x=1 in [1,2,3]) 0
  |         ^

